# PandaDebugging

./: .claudeignore  .gitignore  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md
.github/workflows/: ci.yml
crates/core-ws/: Cargo.toml
crates/core-ws/src/: apu.rs  cartridge.rs  eeprom.rs  interrupt.rs  io.rs  lib.rs  machine.rs  memory.rs  palette.rs  ppu.rs  serial.rs
crates/cpu-v30mz/: Cargo.toml
crates/cpu-v30mz/src/: alu.rs  bus.rs  decode.rs  exec.rs  lib.rs  registers.rs
crates/format-ws/: Cargo.toml
crates/format-ws/src/: header.rs  lib.rs
crates/v20-harness/: Cargo.toml
crates/v20-harness/src/: main.rs
crates/ws-cli/: Cargo.toml
crates/ws-cli/src/: main.rs
crates/ws-contracts/: Cargo.toml
crates/ws-contracts/src/: lib.rs
crates/ws-testkit/: Cargo.toml
crates/ws-testkit/src/: lib.rs
docs/: ARCHITECTURE.md  COMMUNITY-BUG-FIXES.md  COMMUNITY-BUGS.md  LEGAL_PROVENANCE.md  PROJECT_STATE.md  TEST_ROMS.md  VALIDATION.md
docs/hardware/: 00-overview.md  01-cpu-v30mz.md  02-interrupts.md  06-cartridge.md  07-io-registers.md  README.md
fixtures/: README.md
tools/: fetch-test-roms.ps1  gate.ps1  v20_prep.py
