[workspace]
members = [
    "crates/ws-contracts",
    "crates/format-ws",
    "crates/core-ws",
    "crates/ws-testkit",
    "crates/ws-cli",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.96"
version = "0.1.0"
license = "PolyForm-Noncommercial-1.0.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"

[profile.release]
codegen-units = 1
lto = "thin"
