[workspace]
members = [
    "crates/ws-contracts",
    "crates/format-ws",
    "crates/cpu-v30mz",
    "crates/core-ws",
    "crates/ws-testkit",
    "crates/ws-cli",
    "crates/v20-harness",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.96"
version = "0.1.0"
license = "GPL-3.0-or-later"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"

[profile.release]
codegen-units = 1
lto = "thin"
